--- a/Crawler-Twitter/pom.xml
+++ b/Crawler-Twitter/pom.xml
@@ -53,6 +53,14 @@
   			<version>6.0.4</version> 
   		</dependency>
   		
+  		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20171018</version>
+		</dependency>
+  		
+  		
 	</dependencies>
 	<build>
 		<finalName>Crawler-Twitter</finalName>
