--- a/Crawler-Twitter/pom.xml
+++ b/Crawler-Twitter/pom.xml
@@ -59,6 +59,12 @@
     		<artifactId>json</artifactId>
     		<version>20171018</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.9-rc</version>
+		</dependency>
   		
   		
 	</dependencies>
